--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tezos-plenty-dex-searcher",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://letier3110.github.io/tezos-plenty-dex-searcher/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
